--- a/src/components/ImageSection/imageSection.scss
+++ b/src/components/ImageSection/imageSection.scss
@@ -2,7 +2,6 @@
   background-size: cover;
   background-position: center;
   width: 100%;
-  padding-bottom: 75%;
 }
 
 .imageSection__content {
@@ -71,6 +70,7 @@
     width: 50%;
     padding-bottom: 0;
   }
+
   .imageSection__content {
     width: 50%;
     padding: 4rem 3rem;
