--- a/src/components/LatestProjectsFeed/latestProjectsFeed.scss
+++ b/src/components/LatestProjectsFeed/latestProjectsFeed.scss
@@ -3,4 +3,5 @@
   text-align: center;
   font: 700 1.5rem/2rem 'Source Sans Pro', Arial, sans-serif;
   color: $core--light;
+  padding: 0 0 1.5rem 0;
 }
